tests/NormalTests/paczka2/big_fuzzy/70043032.err
Error in line 2: ToyND S230 91,7
Error in line 1: 5Pg S230 43,0
Error in line 19: CFY S88 85,3
Error in line 38: CFY S635 35,7
Error in line 57: CFY S88 4,3
Error in line 51: 5Pg S230 21,9
Error in line 81: CFY S34 64,4
Error in line 92: CADgUlAf5S S88 22,6
Error in line 99: ToyND S230 212,4
Error in line 110: 5Pg S34 5,10
Error in line 114: S34 S635 -4,8
Error in line 117: 5Pg S34 10,0
Error in line 104: S34 S635 63,0
Error in line 124: zcdj4 S635 5M,2
Error in line 126: zcdj4 S635 93,87
Error in line 113: zcdj4 S88 10,0
Error in line 127: CFY S34 42,6
Error in line 132: CFY S88 90,0
Error in line 106: CADgUlAf5S S635 8,7
Error in line 138: zcdj4 S88 78,2
Error in line 157: CADgUlAf5S S34 28,1
Error in line 153: S34 S34 54,5
Error in line 159: CADgUlAf5S S230 48,8
Error in line 172: 5Pg S88 82,6
Error in line 183: CADgUlAf5S S88 87,9
Error in line 209: 5Pg S88 57,5
Error in line 210: 5Pg S230 3,0
Error in line 218: CADgUlAf5S S34 59,1
Error in line 222: 7YRd S88 43,7
Error in line 227: CADgUlAf5S S230 23,6
Error in line 233: CFY S34 21,1
Error in line 234: 5Pg S88 1,4
Error in line 237: CFY S88 11,4
Error in line 244: 5Pg S635 34,4
